# cjm-transcript-correction-tui

./: .gitignore  README.md  pyproject.toml
cjm_transcript_correction_tui/: __init__.py  app.py  audio.py  cli.py  spine.py
tests/: test_gestures.py  test_state.py
tests_manual/: keyrate_probe.py
